@@ -26,7 +26,7 @@
  */
 // TODO make this sucker an int when we change BZFS stuff
 #ifndef BZ_PROTO_VERSION
-#define BZ_PROTO_VERSION	"1113"
+#define BZ_PROTO_VERSION	"1114"
 #endif
 
 #ifndef BZ_MAJOR_VERSION
@@ -38,7 +38,7 @@
 #endif
 
 #ifndef BZ_REV
-#define BZ_REV                  3
+#define BZ_REV                  4
 #endif
 
 // DEVEL | STABLE | MAINT
